--- a/index.html
+++ b/index.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | QR code component</title>
+  </head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | QR code component</title>
-</head>
-
-<body>
-  <div class="card border-radius">
-    <img class="card-image border-radius" src="./images/image-qr-code.png" alt="QR-CODE">
-    <h3>Improve your front-end skills by building projects</h3>
-    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
-  <div class="attribution">
-    <small>
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/Abeeujah">Abeeujah</a>.
-    </small>
-  </div>
-</body>
-
+  <body>
+    <main>
+      <div class="center">
+        <div class="card border-radius">
+          <img
+            class="card-image border-radius"
+            src="./images/image-qr-code.png"
+            alt="QR code to frontendmentor.io"
+          />
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        <p class="card-text">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="https://github.com/Abeeujah">Abeeujah</a>.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
