--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <main>
-      <div class="center">
+      <div class="center mb-1">
         <div class="card border-radius">
           <img
             class="card-image border-radius"
